RESOLVED FIXED204433
[WebGL] Fix framebufferTexture2D with DEPTH_STENCIL_ATTACHMENT on ANGLE
https://bugs.webkit.org/show_bug.cgi?id=204433
Summary [WebGL] Fix framebufferTexture2D with DEPTH_STENCIL_ATTACHMENT on ANGLE
Justin Fan
Reported 2019-11-20 17:39:55 PST
Addresses conformance/extensions/webgl-depth-texture.html failures.
Attachments
Patch (2.53 KB, patch)
2019-11-20 17:46 PST, Justin Fan
no flags
Justin Fan
Comment 1 2019-11-20 17:46:28 PST
WebKit Commit Bot
Comment 2 2019-11-21 13:48:07 PST
Comment on attachment 384011 [details] Patch Clearing flags on attachment: 384011 Committed r252751: <https://trac.webkit.org/changeset/252751>
WebKit Commit Bot
Comment 3 2019-11-21 13:48:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-21 13:49:22 PST
Note You need to log in before you can comment on or make changes to this bug.