[WebGL] Fix framebufferTexture2D with DEPTH_STENCIL_ATTACHMENT on ANGLE https://bugs.webkit.org/show_bug.cgi?id=204433

Reviewed by Dean Jackson.

ANGLE expects requests for DEPTH_STENCIL_ATTACHMENT to not be split into two calls, as previous WebGL 1 backend required.

No new tests. Prevents conformance/extensions/webgl-depth-texture.html regression when run with the ANGLE backend.

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::framebufferTexture2D):


Canonical link: https://commits.webkit.org/217732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252751 268f45cc-cd09-0410-ab3c-d52691b4dbfc